RESOLVED FIXED 258600
Regression: User-friendly name for the GPUProcess no longer gets set
https://bugs.webkit.org/show_bug.cgi?id=258600
Summary Regression: User-friendly name for the GPUProcess no longer gets set
Chris Dumez
Reported 2023-06-27 21:06:52 PDT
User-friendly name for the GPUProcess no longer gets set, it shows "com.apple.WebKit.GPU" in Activity Monitor instead of "Safari Graphics and Media".
Attachments
Chris Dumez
Comment 1 2023-06-27 21:10:42 PDT
EWS
Comment 2 2023-06-28 20:34:49 PDT
Committed 265610@main (73df24e54460): <https://commits.webkit.org/265610@main> Reviewed commits have been landed. Closing PR #15356 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-06-28 20:35:16 PDT
EWS
Comment 4 2023-06-29 07:35:33 PDT
Committed 265619@main (d42ba8c64e46): <https://commits.webkit.org/265619@main> Reviewed commits have been landed. Closing PR #15404 and removing active labels.
Chris Dumez
Comment 5 2023-06-29 08:12:24 PDT
EWS
Comment 6 2023-06-29 09:17:25 PDT
Committed 265622@main (696d5ab56e5c): <https://commits.webkit.org/265622@main> Reviewed commits have been landed. Closing PR #15405 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.