Source/WebKit/GPUProcess/GPUProcess.cpp
@@ -298,6 +298,10 @@ void GPUProcess::initializeGPUProcess(GPUProcessCreationParameters&& parameters)
 #if USE(OS_STATE)
     registerWithStateDumper("GPUProcess state"_s);
 #endif
+
+#if PLATFORM(COCOA)
+    platformInitializeGPUProcess(parameters);
+#endif
 }
 
 void GPUProcess::updateGPUProcessPreferences(GPUProcessPreferences&& preferences)
