Source/WebKit/GPUProcess/cocoa/GPUProcessCocoa.mm
@@ -31,10 +31,15 @@
 #if ENABLE(GPU_PROCESS) && PLATFORM(COCOA)
 
 #import "GPUConnectionToWebProcess.h"
+#import "GPUProcessCreationParameters.h"
 #import "Logging.h"
 #import "RemoteRenderingBackend.h"
 #import <pal/spi/cocoa/AVFoundationSPI.h>
 #import <wtf/RetainPtr.h>
+
+#if PLATFORM(MAC)
+#include <pal/spi/cocoa/LaunchServicesSPI.h>
+#endif
 
 #import <pal/cocoa/AVFoundationSoftLink.h>
 
@@ -88,6 +93,33 @@ void GPUProcess::ensureAVCaptureServerConnection()
     }
 }
 #endif
+
+void GPUProcess::platformInitializeGPUProcess(GPUProcessCreationParameters& parameters)
+{
+#if PLATFORM(MAC)
+    auto launchServicesExtension = SandboxExtension::create(WTFMove(parameters.launchServicesExtensionHandle));
+    if (launchServicesExtension) {
+        bool ok = launchServicesExtension->consume();
+        ASSERT_UNUSED(ok, ok);
+    }
+
+    // It is important to check in with launch services before setting the process name.
+    launchServicesCheckIn();
+
+    // Update process name while holding the Launch Services sandbox extension
+    updateProcessName();
+
+    // Close connection to launch services.
+#if HAVE(HAVE_LS_SERVER_CONNECTION_STATUS_RELEASE_NOTIFICATIONS_MASK)
+    _LSSetApplicationLaunchServicesServerConnectionStatus(kLSServerConnectionStatusDoNotConnectToServerMask | kLSServerConnectionStatusReleaseNotificationsMask, nullptr);
+#else
+    _LSSetApplicationLaunchServicesServerConnectionStatus(kLSServerConnectionStatusDoNotConnectToServerMask, nullptr);
+#endif
+
+    if (launchServicesExtension)
+        launchServicesExtension->revoke();
+#endif // PLATFORM(MAC)
+}
 
 } // namespace WebKit
 
